# secure-rag

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  Dockerfile  Dockerfile.runtime  EVALUATION_FRAMEWORK_CHECKLIST.md  LICENSE  MANIFEST.in  README.md  REFACTOR_CHECKLIST.md  SECURITY.md  context.md  data.txt  docker-compose.yml  embedding.py  generator.py  ingest.py  pdf.loader.py  pyproject.toml  rag_features_checklist.md  rag_pipeline.py  ragtest.py  requirement.txt  retriver.py  setup.py  test_data.txt  tui.py  vector_store.py
.github/workflows/: docker-ci.yml  publish-ghcr.yml  python-ci.yml
benchmarks/: README.md  _common.py  dataset.jsonl  dataset_queries.json  generate_dataset.py  privacy_eval.py  results.json  train_test_split.json
benchmarks/retrieval/: __init__.py  failure_analysis.py  failure_analysis_v1.json  ground_truth.py  ground_truth_v1.json  metrics.py  metrics_v1.json  retrieval_results_v1.json  runner.py
secure_rag/: __init__.py  cli.py  embedding.py  generator.py  header.py  masker.py  pdf_loader.py  rag_pipeline.py  retriever.py  retriver.py  vector_store.py
secure_rag.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
test/: secure.py
tests/: test_chunking.py  test_cli.py  test_generator.py  test_header.py  test_masker.py  test_pre_embedding_masking.py  test_rag_answer.py  test_rag_pipeline.py  test_vector_store.py
